# -*- mode: org -*-
* v0.7.6    UNRELEASED

- ~transient-active-prefix~ now accepts a single prefix symbol, in place
  of a list of such symbols.  #307

- ~other-frame-prefix~ and ~other-window-prefix~ can now be used while a
  transient prefix is active.  #305

* v0.7.5    2024-09-01

- Updated tooling.

Bug fixes:

- ~static-if~ is now used correctly.  0e35673e

- When an existing window ends up being used to display the transient
  buffer, then the previous value of the ~no-other-window~ parameter is
  now restored, when the transient is exited.  #302

- The names assigned to suffixes, which are defined using lambdas in
  the prefix definition, are now guaranteed to be unique.  #304

* v0.7.4    2024-08-05

- Added new function ~transient-active-prefix~.

* v0.7.3    2024-07-13

- Refactored code responsible for inserting columns.

Bug fix:

- The ~transient-current-*~ variables are intended to only be used by
  suffix commands, when they are invoked from a prefix.  Previously
  they were only cleared when the prefix is ultimately exited, which
  meant that they unintentionally were accessible in timers.  Now the
  values of these variables are nil when used outside their intended
  scope.  0e0ece32, f2cb28a5

* v0.7.2    2024-06-24

- Added support for adding suffixes that activate value presets.  #183

Bug fix:

- Restored the ability to individually set infix arguments if the
  prefix's ~refresh-suffixes~ slot is non-nil.  8db5f0fd

* v0.7.1    2024-06-19

- Added a workaround for ~emoji.el~ from Emacs 29.1 calling an internal
  function using an outdated number of arguments.  #288

* v0.7.0    2024-06-18

- Added new macro ~transient-augment-suffix~, which can be used to
  specify the suffix behavior of a command that was previously defined
  as a prefix, using ~transient-define-prefix~.  2fd3ea14

- Added new function ~transient-scope~, which is just a convenient way
  to get the value of the ~scope~ slot of the ~transient-prefix-object~.
  7f6c39c5
